--- a/client/package.json
+++ b/client/package.json
@@ -3,18 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10",
     "axios": "^0.16.1",
     "jsonwebtoken": "^7.4.1",
     "jwt-decode": "^2.2.0",
     "material-ui": "^0.18.1",
+    "material-ui-image": "^1.4.1",
     "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-responsive": "^1.3.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-scripts": "1.0.10",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.2.0",
@@ -29,10 +30,10 @@
     "eject": "react-scripts eject"
   },
   "babel": {
-      "presets":[
-        "es2015",
-        "react"
-      ]
+    "presets": [
+      "es2015",
+      "react"
+    ]
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -47,5 +48,4 @@
     "webpack": "^2.5.1",
     "webpack-dev-server": "^2.4.5"
   }
-
 }
