--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "1.0.10",
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.6.0",
+    "redux-persist": "^4.9.1",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.70.0",
     "validator": "^8.0.0"
