--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "redux-persist": "^4.9.1",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.70.0",
+    "socket.io-client": "^2.0.3",
     "validator": "^8.0.0"
   },
   "scripts": {
