--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "jsonwebtoken": "^7.4.1",
+    "jspdf": "^1.3.4",
     "jwt-decode": "^2.2.0",
     "material-ui": "^0.18.1",
     "material-ui-image": "^1.4.1",
