--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
+    "chart.js": "^2.7.0",
     "jsonwebtoken": "^7.4.1",
     "jspdf": "^1.3.4",
     "jwt-decode": "^2.2.0",
@@ -11,6 +12,7 @@
     "material-ui-image": "^1.4.1",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-chartjs-2": "^2.6.2",
     "react-dom": "^15.6.1",
     "react-paginate": "^4.4.3",
     "react-redux": "^5.0.5",
