--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.16.1",
     "chart.js": "^2.7.0",
+    "isemail": "^3.0.0",
     "jsonwebtoken": "^7.4.1",
     "jspdf": "^1.3.4",
     "jwt-decode": "^2.2.0",
@@ -30,9 +31,7 @@
   "scripts": {
     "dev": "webpack-dev-server --open",
     "start": "webpack-dev-server --open",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "postinstall": "webpack -p"
   },
   "babel": {
     "presets": [
