--- a/client/package.json
+++ b/client/package.json
@@ -29,7 +29,8 @@
     "validator": "^8.0.0"
   },
   "scripts": {
-    "dev": "webpack-dev-server --open",
+    "dev": "set NODE_ENV=development&& webpack-dev-server --open",
+    "prod": "set NODE_ENV=production&& webpack -p",
     "start": "webpack-dev-server --open",
     "postinstall": "webpack -p"
   },
