--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "body-parser": "1.17.1",
     "cors": "2.8.3",
     "express": "4.15.2",
+    "heroku-ssl-redirect": "0.0.4",
     "jsonwebtoken": "7.3.0",
     "lodash": "^4.17.4",
     "mongoose": "4.9.5",
